# ops-powerd

./: .gitreview  CMakeLists.txt  DESIGN.md  README.md  powerd.c  powerd.h
include/: powerd.h
ops-tests/: testsuite_gate@component.conf  testsuite_gate@feature.conf
ops-tests/component/: test_powerd_ct_powersupply.py
src/: powerd.c
src/cli/: powersupply_vty.c
tests/: test_vtysh_ct_powersupply.py
